locale/es_ca: updated to r5590 by joseant.mg.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5599 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿# Español Centroamericano
+# Español Centroamericano
 # By baler0
 # es-MX, es-CO, es-GT, es-CR, es-BO, es-EC, es-SV, es-PR
 
@@ -63,12 +63,12 @@ foxtrick.HTDateFormat.desc=Añade las fechas más importantes de la semana y tem
 foxtrick.HTDateFormat.LocalSaison.desc=Muestra la temporada local en lugar de la temporada global
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Usar una configuración personal, fijando el primer día de la semana (0 = lunes/predeterminado, -2 = sábado)
 foxtrick.TeamPopupLinks.desc=Muestra una pequeña ventana emergente con atajos, cuando se situa el cursor por encima del enlace a un equipo
-foxtrick.TeamPopupLinksMore.desc=Muestra un enlace 'Más...' situando el cursor por ecima del enlace a un equipo, que revela más atajos
 foxtrick.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la conferencia y página del equipo.
 foxtrick.StaffMarker.manager.desc=Resaltar los nicks de miembros del staff en la página del equipo
 foxtrick.StaffMarker.own.desc=Marcadores personales
 foxtrick.StaffMarker.flag.desc=Añade banderas a los usuarios dentro de la caja de selección
 foxtrick.ForumYouthIcons.desc=Muestra una barra con enlaces para la academia de juveniles (También funciona para correo, anuncios de prensa, libro de visitas y anuncios)
+foxtrick.ForumYouthIcons.q.desc=Añade un icono para las etiquetas de Citar si faltan
 foxtrick.ForumYouthIcons.user_id.desc=Añade un icono para el ID del mánager
 foxtrick.ForumYouthIcons.kit_id.desc=Añade un icono para el ID del uniforme
 foxtrick.ForumYouthIcons.article_id.desc=Añade un icono para el ID del artículo
@@ -165,17 +165,6 @@ foxtrick.ExtraPlayerInfo.CoachInfo.desc=Muestra información sobre entrenadores 
 foxtrick.ExtraPlayerInfo.Flag.desc=Muestra la nacionalidad de los jugadores como banderas.
 foxtrick.PlayerFilters.desc=Añade una caja de selección en la página de jugadores, para poder filtrarlos.
 foxtrick.HistoryStats.desc=Proporciona una Vista General de la historia del equipo
-foxtrick.HistoryStats.season=Temporada
-foxtrick.HistoryStats.season.short=T
-foxtrick.HistoryStats.cup=Ronda Copa
-oxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Liga
-foxtrick.HistoryStats.league.short=L
-foxtrick.HistoryStats.pos=Posición final en la Liga
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Estadísticas del Historial
-foxtrick.HistoryStats.cupwinner=Ganador Copa
-foxtrick.HistoryStats.cupwinner.short=GC
 foxtrick.LargeFlags.desc=Aumentar el tamaño de la bandera del país en la página del jugador si las caras se muestran.
 foxtrick.GoToPostBox.desc=Añadir una ventana 'Ir al Mensaje' dentro de la conferencia
 foxtrick.TeamSelectBox.desc=Reemplaza la lista de jugadores por un cuadro de selección
@@ -203,6 +192,7 @@ foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Arregla el problema de cajas 
 foxtrick.FixcssProblems.RTL_Fixes.desc=Arregla algunos errores de HT con lenguajes que tienen escrituras de derecha-izquierda
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Añade una barra de desplazamiento dentro del foro. Menos flickering (parpadeo) que la opción de HT
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Aumenta el tamaño de fuente para el formato de HT.
+foxtrick.FixcssProblems.BrasilToolbarFix.desc=Quitar la barra UOL (para usuarios brasileños)
 foxtrick.SimplePresentation.desc=Opciones de presentación adicionales.
 foxtrick.SimplePresentation.League_Table.desc=Añade lineas verticales a la tabla de liga para facilitar su lectura.
 foxtrick.SimplePresentation.Guestbook.desc=Aumenta la facilidad de lectura en el libro de visitas.
@@ -215,7 +205,6 @@ foxtrick.ForumPresentation.desc=Opciones de presentación adicionales para el Fo
 foxtrick.ForumPresentation.HideFlagsInForumHeader.desc=Oculta la bandera del usuario en el encabezado de los mensajes del foro.
 foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Oculta la liga del usuario en el encabezado de los mensajes del foro.
 foxtrick.ForumPresentation.Forum_Spoiler_reveal.desc=Muestra siempre el contenido de los spoilers
-foxtrick.ForumPresentation.hideForumNotificationBox.desc=Oculta la notificación del foro acerca de mensajes sin leer previos dentro del hilo.
 foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Muestra el numero de nuevos mensajes entre brackets detrás de la cuenta de mensajes
 foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Muestra iconos en lugar de enlaces de texto en el pie del foro
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Arregla la descolocación del avatar e información cuando el encabezado del mensaje se llena
@@ -225,16 +214,7 @@ foxtrick.SkinPlugin.Skin1.desc=Activar skin 1
 foxtrick.SkinPlugin.Skin2.desc=Activar skin 2
 foxtrick.CurrencyConverter.desc=Convierte una moneda/divisa dentro de Hattrick
 foxtrick.MovePlayerStatement.desc=Coloca las declaraciones del jugador en la imagen del mismo. Si las imágenes estan deshabilitadas, las declaraciones se eliminaran.
-foxtrick.TickerColoring.desc=Añade color a las notificaciones de Hattrick.
-foxtrick.TickerColoring.LoginWelcome.desc=Color perzonalizado Login de Bienvenida
-foxtrick.TickerColoring.LoginSupporters.desc=Color perzonalizado Login de equipos seguidos
-foxtrick.TickerColoring.ForumReplyToMe.desc=Color perzonalizado Mensajes del Foro
-foxtrick.TickerColoring.TransferMarket.desc=Color perzonalizado Transferencia Mercado
-foxtrick.TickerColoring.Challenges.desc=Color perzonalizado para Amistosos
-foxtrick.TickerColoring.Guestbook.desc=Color perzonalizado para Libro de Visita
-foxtrick.TickerColoring.MailToMe.desc=Color perzonalizado para Correos
-foxtrick.TickerColoring.MyHTMessages.desc=Color personalizado para mensajes de MiHT
-foxtrick.TickerColoring.Hover.desc=Color perzonalizado al colocar el cursor
+foxtrick.TickerColoring.desc=Los diferentes eventos despelagados en la sección de noticias se verá coloreado.
 foxtrick.ExtraShortcuts.desc=Añade un enlace a las Estadísticas de Supporter en los iconos principales
 foxtrick.ExtraShortcuts.AddLeft.desc=Seleccionar para añadir el icono a la izquierda, dejar sin seleccionar para añadirlo a la derecha
 foxtrick.ExtraShortcuts.AddSpace.desc=Aumentar espacio para iconos (atajos)
@@ -281,45 +261,26 @@ foxtrick.LeagueNewsFilter.highlight_wins.desc=Resaltar equipos ganadores en los 
 foxtrick.LeagueNewsFilter.gray_bots.desc=Resaltar bots y equipos sin dueños en la tabla de partidos de liga.
 foxtrick.ShortPAs.desc=Muestra solo un enbezado expandible para los anuncios de prensa
 foxtrick.MoveManagerOnline.desc=Mueve la lista de managers en linea en la región. Precaución! Esto puede volverse muy lento si la lista de managers en línea es mayor a 100.
-foxtrick.TeamPopupLinks.OpenNewTab.desc=Abrir enlaces en una nueva pestaña
 foxtrick.TeamPopupLinks.TeamLinks.desc=Añade ventana de enlaces a los enlaces del equipo
 foxtrick.TeamPopupLinks.UserLinks.desc=Añade ventana de enlaces a los enlaces al usuario
 foxtrick.TeamPopupLinks.Manager.desc=Enlace al usuario (para enlaces del equipo)
-foxtrick.TeamPopupLinksMore.Manager.desc=Enlace al usuario (para enlaces del equipo)
 foxtrick.TeamPopupLinks.Team.desc=Enlace al Equipo (para enlaces al usuario)
-foxtrick.TeamPopupLinksMore.Team.desc=Enlace al Equipo (para enlaces al usuario)
-foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Enlace al equipo en Alltid
-foxtrick.TeamPopupLinksMore.TeamAtAlltid.desc=Enlace al equipo en Alltid
-foxtrick.TeamPopupLinks.Matches.desc=Enlace a los últimos partidos
-foxtrick.TeamPopupLinksMore.Matches.desc=Enlace a los últimos partidos
-foxtrick.TeamPopupLinks.Players.desc=Enlace a la página de jugadores
-foxtrick.TeamPopupLinksMore.Players.desc=Enlace a la página de jugadores
-foxtrick.TeamPopupLinks.last_5_ips.desc=Enlace a las últimas 5 conexiones
-foxtrick.TeamPopupLinksMore.last_5_ips.desc=Enlace a las últimas 5 conexiones
+foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Página del equipo en Alltid
+foxtrick.TeamPopupLinks.Matches.desc=Partidos
+foxtrick.TeamPopupLinks.Players.desc=Jugadores
+foxtrick.TeamPopupLinks.last_5_ips.desc=Últimas 5 conexiones
 foxtrick.TeamPopupLinks.Guestbook.desc=Enlace al Libro de Visitas
-foxtrick.TeamPopupLinksMore.Guestbook.desc=Enlace al Libro de Visitas
-foxtrick.TeamPopupLinks.SendMessage.desc=Enlace para enviar mensaje
-foxtrick.TeamPopupLinksMore.SendMessage.desc=Enlace para enviar mensaje
-foxtrick.TeamPopupLinks.Challenge.desc=Enlace para Retar
-foxtrick.TeamPopupLinksMore.Challenge.desc=Enlace para Retar
-foxtrick.TeamPopupLinks.Achievements.desc=Enlace a Logros
-foxtrick.TeamPopupLinksMore.Achievements.desc=Enlace a Logros
-foxtrick.TeamPopupLinks.TransferHistory.desc=Enlace al Historial de Transferencias
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=Enlace al Historial de Transferencias
-foxtrick.TeamPopupLinks.TeamHistory.desc=Enlace al Historial del Club
-foxtrick.TeamPopupLinksMore.TeamHistory.desc=Enlace al Historial del Club
-foxtrick.TeamPopupLinks.LastLineup.desc=Enlace a la Última Alineación
-foxtrick.TeamPopupLinksMore.LastLineup.desc=Enlace a la Última Alineación
-foxtrick.TeamPopupLinks.NextMatch.desc=Enlace al próximo partido
-foxtrick.TeamPopupLinksMore.NextMatch.desc=Enlace al próximo partido
+foxtrick.TeamPopupLinks.SendMessage.desc=Enviar mensaje
+foxtrick.TeamPopupLinks.Challenge.desc=Retar
+foxtrick.TeamPopupLinks.Achievements.desc=Logros
+foxtrick.TeamPopupLinks.TransferHistory.desc=Historial de Transferencias
+foxtrick.TeamPopupLinks.TeamHistory.desc=Historial del Club
+foxtrick.TeamPopupLinks.LastLineup.desc=Última Alineación
+foxtrick.TeamPopupLinks.NextMatch.desc=Próximo partido
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Añadir próximo partido a HT-Live
-foxtrick.TeamPopupLinksMore.AddNextMatch.desc=Añadir próximo partio a HT-Live
-foxtrick.TeamPopupLinks.YouthMatches.desc=Enlace a los partidos juveniles
-foxtrick.TeamPopupLinksMore.YouthMatches.desc=Enace a los partidos juveniles
-foxtrick.TeamPopupLinks.Coach.desc=Enlace al entrenador
-foxtrick.TeamPopupLinksMore.Coach.desc=Enlace al entrenador
+foxtrick.TeamPopupLinks.YouthMatches.desc=Partidos juveniles
+foxtrick.TeamPopupLinks.Coach.desc=Entrenador
 foxtrick.TeamPopupLinks.CustomLink.desc=Enlaces propios. Las etiquetas [userid] y [teamid] serán reemplazadas por los Id's correspondientes.
-foxtrick.TeamPopupLinksMore.CustomLink.desc=Enlaces propios. Las etiquetas [userid] y [teamid] serán reemplazadas por los Id's correspondientes.
 foxtrick.SkillColoring.desc=Mejor visualización de las habilidades
 foxtrick.SkillColoring.skill_color.desc=Habilidades en color
 foxtrick.SkillColoring.only_skill_color.desc=Solo coloca las habilidades en color y no valores de personalidad, ánimo de los aficionados, etc.
@@ -342,8 +303,6 @@ foxtrick.HighlightCupwins.desc=Resalta los equipos ganadores dentro de la págin
 foxtrick.HighlightCupwins.highlight_outsider.desc=Resalta el resutado si el equipo local gana.
 foxtrick.SkillTranslation.desc=Añade traducción al inglés para las habilidades en la página de ayuda/denominaciones
 foxtrick.ReadHtPrefs.desc=Automáticamente cambia el idioma de Foxtrick, cada vez que se cambien las preferencias de idioma de Hattrick
-foxtrick.ReadHtCountryCurrencyDateFormat.desc=Automaticamente detecta el país, moneda/divisa y formato de fecha
-foxtrick.CurrentHtCountryCurrencyDateFormat.desc=Ultimos valores detectados:
 foxtrick.OnPagePrefs.desc=Muestra una caja expandible en la barra lateral, para cambiar las preferencias de los módulos que alteran la página actual
 foxtrick.CountryList.desc=Modificaciones al nombre de los países
 foxtrick.CountryList.SelectBoxes.desc=Reemplaza los nombres en inglés en las cajas de selección, por sus nombres originales
@@ -365,9 +324,6 @@ foxtrick.LeagueAndMatchChat.OpenYapletFrame.desc=Abre el chat Yaplet dentro de l
 foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Abre el chat Gabbly en una nueva ventana
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Elige tu nombre para el Chat
 foxtrick.RapidId.desc=Añade una caja en parte superior de la página para ver equipo, jugador, etc por ID
-foxtrick.ReadHtPrefsFromHeader.desc=Automaticamente ajustar las preferencias de Foxtrick
-foxtrick.ReadHtPrefsFromHeader.Language.desc=COnfigurar idioma
-foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Configurar país, fecha y moneda/divisa
 foxtrick.YouthSeriesEstimation.desc=En la tabla de resultados de búzqueda,estima el inicio de una liga juvenil que estan en el descanso entre temporadas.
 foxtrick.LocalTime.desc=Muestra de manera opcional la hora local en lugar de la hora de Hattrick. Dando clic en el reloj, se cambia entre ambas opciones.
 foxtrick.LocalTime.DefaultLocal.desc=Muestra la hora local de manera predeterminada.
@@ -375,6 +331,8 @@ foxtrick.ForumThreadAutoIgnore.desc=Automáticamente ignorar temas del foro con 
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista de etiquetas, ej: NT, idea, Bug. Serparadas por coma, sin importar mayúsculas o minúsculas
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista de temas aceptados por ID (solo la parte antes del punto). Los temas en la lista de aceptados no será ignorada. Separados por coma.
 foxtrick.TableSort.desc=Convierte las tablas 'propiamente realizadas' ordenables, cuando cuenten con encabezado (incluyendo las tablas en los mensajes del foro)
+foxtrick.LiveAlert.desc=Alertar de log goles de HT Live
+foxtrick.OldStyleFace.desc=Mostrar caras en el estilo antiguo
 
 # -----------------------------------------------------------------------------
 
@@ -386,6 +344,19 @@ foxtrick.ExtraShortcuts.statistics=Estadísticas
 foxtrick.ExtraShortcuts.transfers=Transferencias
 foxtrick.ExtraShortcuts.prefs=Preferencias
 foxtrick.ExtraShortcuts.ftprefs=Preferencias de FoxTrick
+
+#HistoryStats
+foxtrick.HistoryStats.season=Temporada
+foxtrick.HistoryStats.season.short=T
+foxtrick.HistoryStats.cup=Ronda Copa
+foxtrick.HistoryStats.cup.short=C
+foxtrick.HistoryStats.league=Liga
+foxtrick.HistoryStats.league.short=L
+foxtrick.HistoryStats.pos=Posición final en la Liga
+foxtrick.HistoryStats.pos.short=P
+foxtrick.HistoryStats.label=Estadísticas del Historial
+foxtrick.HistoryStats.cupwinner=Ganador Copa
+foxtrick.HistoryStats.cupwinner.short=GC
 
 # YouthPromoteDays
 foxtrick.youthpromotedays.prom_d=El jugador puede ser promocionado en
@@ -410,7 +381,7 @@ foxtrick.TeamStats.NotPlayedLatest.label=No jugaron el último partido
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Resumen Temporada
 
-foxtrick.seasonstats.played=JUG
+foxtrick.seasonstats.played=Jug
 foxtrick.seasonstats.won=G
 foxtrick.seasonstats.draw=E
 foxtrick.seasonstats.lost=P
@@ -441,6 +412,8 @@ foxtrick.GoToPostBox.label=Ir!
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
 leave_conf_button=Abandonar foro.
+
+forum.preferences=Preferencias del Foro
 
 # ForumTemplates
 make_template_from_post=Crear plantilla a partir de este mensaje
@@ -473,6 +446,7 @@ ForumYouthIcons.youthteamid=Insertar etiqueta de equipo juvenil
 ForumYouthIcons.youthmatchid=Insertar etiqueta de partido juvenil
 ForumYouthIcons.youthseries=Insertar etiqueta de liga juvenil
 #special bbcode, not really youth icons
+ForumSpecialBBCode.q=Añadir cita
 ForumSpecialBBCode.br=Añadir Salto de línea
 ForumSpecialBBCode.user=Añadir ID del mánager
 ForumSpecialBBCode.kit=Añadir ID del kit
@@ -770,6 +744,9 @@ LastLineup=Última Alineación
 YouthMatches=Partidos Juveniles
 more=más...
 less=menos...
+TeamPopupLinks.prefsCaption=Preferencias de Elnace
+TeamPopupLinks.ShowByDefault=Mostrar por defecto
+TeamPopupLinks.ShowOnMore=Mostrar Más
 
 total_stars=Total de estrellas
 
@@ -826,7 +803,7 @@ maximum=Máximo
 foxtrick.RapidId.ViewById=Vista por ID
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Cmabiar la vista de la tabla
+foxtrick.SkillTable.Switch_view_title=Cambiar la vista de la tabla
 
 # External Chat
 foxtrick.LeagueAndMatchChat.MatchChat=Chat externo de partido
@@ -881,8 +858,6 @@ foxtrick.prefs.external_forum=Foro Foxtrick
 foxtrick.prefs.hattrick_forum=Foro Foxtrick (dentro de Hattrick)
 foxtrick.prefs.commented_screenshots=Capturas de Pantalla comentadas
 foxtrick.prefs.hex_color_editor=Enlace a un editor hexadecimal de colores
-foxtrick.prefs.PrefDefaultWarningLabel=Programar alerta predeterminada
-foxtrick.prefs.PrefDefaultWarningText=Por favor checa la configuración de idioma y moneda. Algunas funciones de Foxtrick si la configuración no es apropiada.
 foxtrick.prefs.basicPreferences=Preferencias Básicas
 foxtrick.prefs.captionHTLanguage=Idioma
 foxtrick.prefs.captionHTCurrency=Divisa
@@ -901,10 +876,10 @@ foxtrick.prefs.labelSavePrefs_Prefs=Ppreferencias
 foxtrick.prefs.labelSavePrefs_Notes=Configuración personal (notas, plantillas y enlaces personalizados)
 foxtrick.prefs.labelLoadPrefs=Importar preferencias (Las preferencias pueden sobre escribirse. Requiere reiniciar)
 foxtrick.prefs.captionDisableSettings=Deshabilitar Foxtrick
-foxtrick.prefs.captionFoxtrickFirstRun=Foxtrick Mi HT
-foxtrick.prefs.labelFoxtrickFirstRun=Selecciona la version de la cual quieres que se muestren lo que ha cambiado en Mi HT
 foxtrick.prefs.stagepref=Desahabilitar en el servidor de Stage
 foxtrick.prefs.disableTemporaryLabel=Deshabilitar temporalmente
+foxtrick.prefs.saved=Preferencias Guardadas!
+foxtrick.prefs.moduleLink=(enlace)
 
 foxtrick.prefs.buttonSave=Guardar
 foxtrick.prefs.buttonCancel=Cancelar
@@ -915,6 +890,12 @@ foxtrick.prefs.buttonDisableAll=Deshabilitar todos
 foxtrick.prefs.buttonSavePrefs=Guardar
 foxtrick.prefs.buttonLoadPrefs=Cargar
 foxtrick.prefs.activeCurrencyConverter=Habilitar convertidor de divisa
+
+about.headDevelopers=Desarrolladores en Jefe
+about.projectOwners=Propietarios Proyecto
+about.developers=Desarrolladores
+about.translators=Traductores
+about.designers=Deseñadores
 
 delete_foxtrick_branches_ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto!
 disable_all_foxtrick_modules_ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
