Russian locale update up to MLF r5590
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5601 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/releaseNotes.xml
+++ b/content/locale/ru/releaseNotes.xml
@@ -2,27 +2,8 @@
 
 <release_note>
 
-<version>0.5.3.0</version>
+<version>0.5.4</version>
 <title>Информация о выпуске (основные изменения и новые возможности)</title>
-<lines>ContextCopy: Полная переработка модуля. Копирование любого выделенного текста в формате HT-ML.</lines>
-<lines>ExtraShortcuts: Опционально дополнительное место для ссылок. Добавлены ссылки на национальные Hattrick-радио.</lines>
-<lines>TableSort: Возможность сортировки таблиц по столбцам.</lines>
-<lines>TeamStats: Добавлены колонки для лидерских качеств и характер (по желанию). Переименовано, старые настройки утеряны</lines>
-<lines>TransferSearchResultFilters: Фильтрация списка результатов поиска трансферов.</lines>
-<lines>YouthSeriesEstimation: Новый модуль для оценки времени начала матчей в юношеской лиге.</lines>
-<lines>ForumYouthIcons: Новая кнопка для преобразования текста в таблицу.</lines>
-<lines>ForumThreadAutoIgnore: Автоигнорирование тем форума, включающих выбранный пользователем текст</lines>
-
-
-<lines>SkillTable: Таблица навыков добавлена к результатам поиска трансферов. Также в таблице появились новые столбцы.</lines>
-<lines>CopyPlayerAd: Теперь поддерживаются игроки академии и навыки игрока отсортированы.</lines>
-<lines>CopyMatchRatings: Теперь варианты показываются в виде всплывающего окошка.</lines>
-<lines>SmallerPages: Уменьшение шинины страницы для не-саппортеров, если запрещены баннеры.</lines>
-<lines>Matchreport: Новые цвета.</lines>
-
-
-<lines></lines>
-<lines>Внимание!</lines>
-<lines>Все пользовательские цвета были вынесены в файл стиля в целях облегчения настроек FoxTrick. Ранее сохранённые цвета утеряны. Смотрите вкладку Помощь в настройках, чтобы получить инструкции как установить свои цвета. Это на самом деле не так трудно.</lines>
-
+<lines>Новый интерфейс настроек.</lines>
+<lines>Модуль LiveAlert для уведомлений о событиях HT Live.</lines>
 </release_note>
