es_su locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5735 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_SU/foxtrick.properties
+++ b/content/locale/es_SU/foxtrick.properties
@@ -62,6 +62,7 @@ foxtrick.StaffMarker.manager.desc=Resaltar los nicks de miembros del staff en la
 foxtrick.StaffMarker.own.desc=Marcadores personales
 foxtrick.StaffMarker.flag.desc=Añade banderas a los usuarios dentro de la caja de selección
 foxtrick.ForumYouthIcons.desc=Muestra una barra con enlaces para la academia de juveniles (También funciona para correo, anuncios de prensa, libro de visitas y anuncios)
+foxtrick.ForumYouthIcons.q.desc=Añade un icono para las etiquetas de Citar si faltan
 foxtrick.ForumYouthIcons.user_id.desc=Añade un icono para el ID del mánager
 foxtrick.ForumYouthIcons.kit_id.desc=Añade un icono para el ID del uniforme
 foxtrick.ForumYouthIcons.article_id.desc=Añade un icono para el ID del artículo
@@ -158,17 +159,6 @@ foxtrick.ExtraPlayerInfo.CoachInfo.desc=Muestra información sobre entrenadores 
 foxtrick.ExtraPlayerInfo.Flag.desc=Muestra la nacionalidad de los jugadores como banderas.
 foxtrick.PlayerFilters.desc=Añade una caja de selección en la página de jugadores, para poder filtrarlos.
 foxtrick.HistoryStats.desc=Proporciona una Vista General de la historia del equipo
-foxtrick.HistoryStats.season=Temporada
-foxtrick.HistoryStats.season.short=T
-foxtrick.HistoryStats.cup=Ronda Copa
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Liga
-foxtrick.HistoryStats.league.short=L
-foxtrick.HistoryStats.pos=Posición final en la Liga
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Estadísticas del Historial
-foxtrick.HistoryStats.cupwinner=Ganador Copa
-foxtrick.HistoryStats.cupwinner.short=GC
 foxtrick.LargeFlags.desc=Aumentar el tamaño de la bandera del país en la página del jugador si las caras se muestran.
 foxtrick.GoToPostBox.desc=Añadir una ventana 'Ir al Mensaje' dentro de la conferencia
 foxtrick.TeamSelectBox.desc=Reemplaza la lista de jugadores por un cuadro de selección
@@ -196,6 +186,7 @@ foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Arregla el problema de cajas 
 foxtrick.FixcssProblems.RTL_Fixes.desc=Arregla algunos errores de HT con lenguajes que tienen escrituras de derecha-izquierda
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Añade una barra de desplazamiento dentro del foro. Menos flickering (parpadeo) que la opción de HT
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Aumenta el tamaño de fuente para el formato de HT.
+foxtrick.FixcssProblems.BrasilToolbarFix.desc=Quitar la barra UOL (para usuarios brasileños)
 foxtrick.SimplePresentation.desc=Opciones de presentación adicionales.
 foxtrick.SimplePresentation.League_Table.desc=Añade lineas verticales a la tabla de liga para facilitar su lectura.
 foxtrick.SimplePresentation.Guestbook.desc=Aumenta la facilidad de lectura en el libro de visitas.
@@ -368,6 +359,8 @@ foxtrick.ForumThreadAutoIgnore.desc=Automáticamente ignorar temas del foro con 
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista de etiquetas, ej: NT, idea, Bug.  Serparadas por coma, sin importar mayúsculas o minúsculas
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista de temas aceptados por ID (solo la parte antes del punto). Los temas en la lista de aceptados no será ignorada. Separados por coma.
 foxtrick.TableSort.desc=Convierte las tablas 'propiamente realizadas' ordenables, cuando cuenten con encabezado (incluyendo las tablas en los mensajes del foro)
+foxtrick.LiveAlert.desc=Alertar de log goles de HT Live
+foxtrick.OldStyleFace.desc=Mostrar caras en el estilo antiguo
 
 # -----------------------------------------------------------------------------
 # IN-GAME STRINGS. translate first
@@ -377,6 +370,19 @@ foxtrick.ExtraShortcuts.statistics=Estadísticas
 foxtrick.ExtraShortcuts.transfers=Transferencias
 foxtrick.ExtraShortcuts.prefs=Preferencias
 foxtrick.ExtraShortcuts.ftprefs=Preferencias de FoxTrick
+
+#HistoryStats
+foxtrick.HistoryStats.season=Temporada
+foxtrick.HistoryStats.season.short=T
+foxtrick.HistoryStats.cup=Ronda Copa
+foxtrick.HistoryStats.cup.short=C
+foxtrick.HistoryStats.league=Liga
+foxtrick.HistoryStats.league.short=L
+foxtrick.HistoryStats.pos=Posición final en la Liga
+foxtrick.HistoryStats.pos.short=P
+foxtrick.HistoryStats.label=Estadísticas del Historial
+foxtrick.HistoryStats.cupwinner=Ganador Copa
+foxtrick.HistoryStats.cupwinner.short=GC
 
 # YouthPromoteDays
 foxtrick.youthpromotedays.prom_d=El jugador puede ser promocionado en
@@ -432,6 +438,8 @@ foxtrick.GoToPostBox.label=Ir a
 leave_conf_button_alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
 leave_conf_button=Abandonar foro.
 
+forum.preferences=Preferencias del Foro
+
 # ForumTemplates
 make_template_from_post=Crear plantilla a partir de este mensaje
 show_templates=Mostrar plantillas
@@ -463,6 +471,7 @@ ForumYouthIcons.youthteamid=Insertar etiqueta de equipo juvenil
 ForumYouthIcons.youthmatchid=Insertar etiqueta de partido juvenil
 ForumYouthIcons.youthseries=Insertar etiqueta de liga juvenil
 #special bbcode, not really youth icons
+ForumSpecialBBCode.q=Añadir cita
 ForumSpecialBBCode.br=Añadir Salto de línea
 ForumSpecialBBCode.user=Añadir ID del mánager
 ForumSpecialBBCode.kit=Añadir ID del kit
@@ -751,6 +760,9 @@ LastLineup=Última Alineación
 YouthMatches=Partidos Juveniles
 more=más...
 less=menos...
+TeamPopupLinks.prefsCaption=Preferencias de Enlace
+TeamPopupLinks.ShowByDefault=Mostrar por defecto
+TeamPopupLinks.ShowOnMore=Mostrar Más
 
 total_stars=Total de estrellas
 
@@ -807,7 +819,7 @@ maximum=Máximo
 foxtrick.RapidId.ViewById=Vista por ID
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Cmabiar la vista de la tabla
+foxtrick.SkillTable.Switch_view_title=Cambiar la vista de la tabla
 
 # External Chat
 foxtrick.LeagueAndMatchChat.MatchChat=Chat externo de partido
@@ -885,6 +897,7 @@ foxtrick.prefs.captionFoxtrickFirstRun=Foxtrick Mi HT
 foxtrick.prefs.labelFoxtrickFirstRun=Selecciona la version de la cual quieres que se muestren lo que ha cambiado en Mi HT
 foxtrick.prefs.stagepref=Desahabilitar Foxtrick en el servidor de Stage
 foxtrick.prefs.disableTemporaryLabel=Deshabilitar Foxtrick temporalmente
+foxtrick.prefs.saved=Preferencias Guardadas!
 
 foxtrick.prefs.buttonSave=Guardar
 foxtrick.prefs.buttonCancel=Cancelar
@@ -895,6 +908,12 @@ foxtrick.prefs.buttonDisableAll=Deshabilitar todos
 foxtrick.prefs.buttonSavePrefs=Guardar
 foxtrick.prefs.buttonLoadPrefs=Cargar
 foxtrick.prefs.activeCurrencyConverter=Habilitar convertidor de divisa
+
+about.headDevelopers=Desarrolladores en Jefe
+about.projectOwners=Propietarios Proyecto
+about.developers=Desarrolladores
+about.translators=Traductores
+about.designers=Deseñadores
 
 delete_foxtrick_branches_ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto!
 disable_all_foxtrick_modules_ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
