Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5761 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -342,6 +342,8 @@ foxtrick.ForumThreadAutoIgnore.Tags.desc=Тагови (на пример: NT, id
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=ИД-ови тема (део ИД-а поста до тачке испред броја поста) које неће бити игнорисане (ИД-ове раздвојите зарезом)
 foxtrick.TableSort.desc=Омогућава сортирање по колонама свих 'правих' табела које имају заглавље (укључујући и табеле у постовима на форуму)
 foxtrick.LiveAlert.desc=Обавештењa за голове у мечевима које пратите уживо.
+foxtrick.NtPeek.desc=Додаје преглед актуелних мечева сениорске и младе репрезентације на страницу: Мој Хеттрик » Вести
+
 # -----------------------------------------------------------------------------
 
 
@@ -649,6 +651,13 @@ foxtrick.ExtendedPlayerDetails.perseason=по сезони
 foxtrick.defensiveTrainer= %s тренер, дефанзивно оријентисан.
 foxtrick.offensiveTrainer= %s тренер, нападачки оријентисан.
 foxtrick.balancedTrainer= %s тренер, нити нападачки нити дефанзивно оријентисан.
+
+ntpeek.title=Мечеви репрезентације
+matches.nt=А репрезентација
+matches.u20=У20 репрезентација
+
+htLive=HT Live
+
 
 foxtrick.onpagepreferences=Фокстрик опције
 foxtrick.modules_allpages=Модули који раде на свим страницама
