--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -192,6 +192,7 @@ foxtrick.FixcssProblems.RTL_Fixes.desc=Коригује неке ХТ грешк
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Додаје кориговани скрол бар страницама форума. Подрхтавање слике је мање него само са укљученом Хеттрик опцијом.
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Повећава величину фонта за ХТ формат 'small_font'.
 foxtrick.FixcssProblems.BrasilToolbarFix.desc=Уклони 'UOL' траку алата (за кориснике из Бразила)
+foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Уклони 'Провири на форум' са свих страница.
 foxtrick.SimplePresentation.desc=Додатне опције за изглед.
 foxtrick.SimplePresentation.League_Table.desc=Додаје вертикалне линије у табели лиге ради боље прегледности.
 foxtrick.SimplePresentation.Guestbook.desc=Побољшава читљивост порука у књизи гостију (уоквирује поруке сивом подлогом).
