Serbian Translation update + release notes
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5854 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -904,6 +904,9 @@ foxtrick.prefs.buttonDisableAll=Искључи све
 foxtrick.prefs.buttonSavePrefs=Извези
 foxtrick.prefs.buttonLoadPrefs=Увези
 foxtrick.prefs.activeCurrencyConverter=Активираj конвертор валуте
+
+foxtrick.versionReleaseNotes=Прикажи промене у верзији:
+
 about.headDevelopers=Главни девелопери
 about.projectOwners=Власници лиценце
 about.developers=Девелопери
